--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,20 @@
-section{
-  background-color: rgb(255, 222, 1);
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Raleway');
+
+body{
+  font-family: 'Open Sans', sans-serif;
+  /*font-family: 'Raleway', sans-serif;*/
+}
+
+nav{
+  background-color: rgb(255, 255, 255);
+}
+
+body{
+  background-image: url("../img/taxi.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#form{
+  background-color: rgb(215, 169, 30);
 }
