--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,3 +44,13 @@ nav{
   border: 2px solid rgb(255, 255, 255);
   margin: 50px 0;
 }
+
+#footer{
+  background-color: rgb(52, 57, 54);
+  height: 80vh;
+  color: rgb(255, 255, 255);
+}
+
+.margin{
+  margin: 50px;
+}
